--- a/styles/main.scss
+++ b/styles/main.scss
@@ -56,6 +56,9 @@ $dark-gray: rgb(100,100,100);
 h6 {
 	font-family: 'Slabo 27px', serif;
 	letter-spacing: 1px;
+	& > em {
+		font-style: italic;
+	}
 }
 
 .resume {
@@ -178,6 +181,22 @@ h6 {
 			background-color: $white;
 			color: $secondary-color;
 		}
+	}
+}
+
+#returnToTop {
+	bottom: 25px;
+	display:none;
+	// opacity: 0;
+	position: fixed;
+	right: 25px;
+	.circle {
+		background-color: $white;
+		border-radius: 50px;
+		color: $primary-color;
+		height: 50px;
+		padding-top: 12px;
+		width: 50px;
 	}
 }
 
